# PyTNL

./: .clang-format  .gersemirc  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  PyTNLConfig.cmake.in  README.md  justfile  mkdocs.yml  pyproject.toml  renovate.json  test_Vector.py
cmake/: PyTNLConfig.cmake.in
docs/: .gitignore  README.md  mkdocs.yml  pyproject.toml
docs/content/examples/: index.md  ndarray.md  vector.md
docs/content/install/: dependencies.md  dev.md  other.md  pypi.md
docs/examples/: ndarray.md  vector.md
docs/install/: dependencies.md  dev.md  git.md  pypi.md
examples/: .gitignore  CSRmatrice.py  array.py  array_advanced.py  array_basics.py  benchmark_ode_cuda.cu  csr_matrix.py  dense_matrix.py  dense_matrix_view.py  matrices.py  ndarray.py  numba_jit.py  ode_solver.py  ode_solver_cuda.py  ode_solver_numba.py  sparse_matrix.py  sparse_matrix_view.py  static_vector.py  vector.py  vector_speed_comparison.py
include/: CMakeLists.txt
include/pytnl/: RawIterator.h  SizesHolder_caster.h  exceptions.h  iostream_caster.h  nanobind.h  pytnl.h  string_caster.h  tnl_conversions.h  tnl_indexing.h  tnl_str_conversion.h  tnl_tuple_conversion.h  typedefs.h  variant_caster.h
include/pytnl/containers/: Array.h  DistributedNDArray.h  NDArray.h  StaticVector.h  Vector.h  buffer_protocol.h  indexing.h  vector_operators.h
include/pytnl/meshes/: MeshWriters.h
include/pytnl/tnl/: Array.h  Grid.h  Grid_getSpaceStepsProducts.h  Mesh.h  MeshReaders.h  MeshWriters.h  SparseMatrix.h  StaticVector.h  Vector.h  mesh_getters.h
include/pytnl/tnl_mpi/: DistributedMesh.h
src/: CMakeLists.txt
src/pytnl/: CMakeLists.txt  _meta.py
src/pytnl/containers/: ArrayVector.cpp  ArrayVector.cu  CMakeLists.txt  NDArray.cpp  NDArray.cu  StaticVector.cpp  __init__.py  containers.cpp  containers.cu
src/pytnl/matrices/: CMakeLists.txt  DenseMatrix.h  MatrixBase.h  SparseMatrix.h  __init__.py  matrices.cpp  matrices.cu
src/pytnl/meshes/: CMakeLists.txt  DistributedMesh.cpp  DistributedMesh.cu  DistributedMeshReaders.cpp  DistributedMeshReaders.cu  DistributedMeshWriters.cpp  DistributedMeshWriters.cu  DistributedMeshWriters.h  Grid.h  Grid1D.cpp  Grid2D.cpp  Grid3D.cpp  Grid_getSpaceStepsProducts.h  Mesh.cpp  Mesh.cu  Mesh.h  MeshReaders.cpp  MeshWriters.cpp  MeshWriters.cu  MeshWriters.h  VTKTraits.cpp  __init__.py  distributeSubentities.cpp  getSpaceStepsProducts.h  mesh_getters.h  meshes.cpp  resolveMeshType.cpp  resolveMeshType.h
src/pytnl/mpi/: CMakeLists.txt  DistributedMesh.cpp  DistributedMesh.h  DistributedMeshReaders.cpp  DistributedMeshWriters.cpp  mpi.cpp
src/pytnl/solvers/: ExplicitSolver.h  IterativeSolver.h  ODESolver.h  __init__.py  ode_methods.cpp  solvers.cpp  solvers.cu
src/tnl/: Array.h  CMakeLists.txt  EntityTypes.h  Grid.h  Grid1D.cpp  Grid2D.cpp  Grid3D.cpp  Grid_getSpaceStepsProducts.h  Mesh.cpp  Mesh.h  MeshReaders.cpp  MeshReaders.h  MeshWriters.cpp  MeshWriters.h  Object.cpp  SparseMatrix.cpp  SparseMatrix.h  StaticVector.h  String.cpp  VTKTraits.cpp  Vector.h  tnl.cpp
src/tnl_mpi/: CMakeLists.txt  DistributedMesh.cpp  DistributedMesh.h  DistributedMeshReaders.cpp  DistributedMeshWriters.cpp  tnl_mpi.cpp
tests/: conftest.py  test_Array.py  test_Array_cuda.py  test_BufferProtocol.py  test_DenseMatrix.py  test_DenseMatrix_cuda.py  test_DistributedNDArray.py  test_DistributedNDArray_cuda.py  test_Grid.py  test_MeshReadersWriters.py  test_MeshReadersWriters_cuda.py  test_NDArray.py  test_NDArrayIndexer.py  test_NDArray_cuda.py  test_ODESolver.py  test_ODESolver_cuda.py  test_SparseMatrix.py  test_SparseMatrix_cross_device.py  test_SparseMatrix_cuda.py  test_StaticArray.py  test_StaticVector.py  test_Vector.py
tests/data/: empty.vtu
tests/data/hexahedrons/: grid_2x3x4.vti  grid_2x3x4.vtk  grid_2x3x4.vtu
tests/data/polygons/: unicorn.vtk  unicorn.vtu
tests/data/polyhedrons/: cube1m_1.vtk  cube1m_1.vtu  hexahedron_and_two_polyhedra.vtu  two_polyhedra.vtk  two_polyhedra.vtu
tests/data/quadrangles/: grid_2x3.vti  grid_2x3.vtk  grid_2x3.vtu
tests/data/tetrahedrons/: cube1m_1.vtk  cube1m_1.vtu
tests/data/triangles/: mrizka_1.vtk  mrizka_1.vtu
tests/data/triangles_2x2x2/: minimized_appended_binary.vtu  minimized_appended_binary_compressed.vtu  minimized_appended_encoded.vtu  minimized_appended_encoded_compressed.vtu  minimized_ascii.vtk  minimized_ascii.vtu  minimized_binary.vtk  minimized_compressed_paraview.vtu  minimized_compressed_tnl.vtu  minimized_encoded_paraview.vtu  minimized_encoded_tnl.vtu  original_with_metadata_and_cell_data.vtk  version_5.1_ascii.vtk  version_5.1_binary.vtk
