[project]
name = "pytnl"
version = "0.0.0"
description = "Python bindings for the Template Numerical Library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://gitlab.com/tnl-project/pytnl"
Issues = "https://gitlab.com/tnl-project/pytnl/-/issues"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
