[project]
name = "pytnl"
version = "0.0.0"
description = "Python bindings for the Template Numerical Library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: C++",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://gitlab.com/tnl-project/pytnl"
Issues = "https://gitlab.com/tnl-project/pytnl/-/issues"

[project.optional-dependencies]
dev = [
    "hypothesis",
    "pytest",
    "pytest-xdist[psutil]",
    "ruff",
    "numpy",
    "mpi4py",
]

[build-system]
requires = ["scikit-build-core>=0.10"]
build-backend = "scikit_build_core.build"

# Reference: https://scikit-build-core.readthedocs.io/en/latest/configuration/index.html
[tool.scikit-build]
# all files are installed by CMake
wheel.packages = []
# specifying build-dir breaks build isolation, but enables incremental and editable builds
build-dir = "build"

[tool.pytest.ini_options]
addopts = "--strict-markers -n auto"
markers = [
    "mpi: marks tests that require the mpi4py package and execution through mpirun",
]
log_level = "INFO"
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
builtins = ["_"]
line-length = 160

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "C90",   # mccabe
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle errors
    "EXE",   # flake8-executable
    "F",     # Pyflakes
    "FA",    # flake8-future-annotations
    "FLY",   # flynt
    "G",     # flake8-logging-format
    "I",     # isort
    "ICN",   # flake8-import-conventions
    "ISC",   # flake8-implicit-str-concat
    "LOG",   # flake8-logging
    "PIE",   # flake8-pie
    "PLC",   # Pylint conventions
    "PLE",   # Pylint errors
    "PLW",   # Pylint warnings
    "RSE",   # flake8-raise
    "RUF",   # Ruff-specific rules
    "SLOT",  # flake8-slot
    "T10",   # flake8-debugger
    "UP",    # pyupgrade
    "W",     # pycodestyle warnings
    "YTT",   # flake8-2020
]
